--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,7 +14,6 @@
             android:id="@+id/action_newsFragment_to_infoFragment"
             app:destination="@id/infoFragment" />
     </fragment>
-
     <fragment
         android:id="@+id/savedFragment"
         android:name="com.example.newsclient.SavedFragment"
@@ -24,11 +23,13 @@
             android:id="@+id/action_savedFragment_to_infoFragment"
             app:destination="@id/infoFragment" />
     </fragment>
-
     <fragment
         android:id="@+id/infoFragment"
         android:name="com.example.newsclient.InfoFragment"
         android:label="fragment_info"
-        tools:layout="@layout/fragment_info" />
-    
+        tools:layout="@layout/fragment_info">
+        <argument
+            android:name="selected_article"
+            app:argType="com.example.newsclient.data.model.Article" />
+    </fragment>
 </navigation>
